k8s/whoami/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 3
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: whoami
          image: docker.io/traefik/whoami:v1.10.3
          resources:
            requests:
              memory: 10M
            limits:
              memory: 20M
          ports:
            - name: web
              containerPort: 80
