k8s/whoami/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://whoami.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: whoami
    gethomepage.dev/group: Other
    gethomepage.dev/icon: mdi-account
    gethomepage.dev/name: Whoami
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: &host whoami.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
